--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+streamlit>=1.32.0
 pandas==2.1.4
-numpy==1.24.3
-scikit-learn==1.3.2
-xgboost==2.0.3
-matplotlib==3.8.2
-seaborn==0.13.0
-plotly==5.17.0
-streamlit==1.29.0
-joblib==1.3.2
+numpy==1.26.4
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.2
+plotly>=5.17.0
+joblib>=1.3.0
