--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit>=1.32.0
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn>=1.3.0
+streamlit
+pandas>=2.2.0
+numpy>=2.0.0
+scikit-learn>=1.4.0
 xgboost>=2.0.0
-matplotlib>=3.7.0
-seaborn>=0.12.2
-plotly>=5.17.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
 joblib>=1.3.0
