Include pre-trained models for faster Streamlit loading

--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ ehthumbs.db
 Thumbs.db
 
 # Project specific
-models/*.joblib
+# models/*.joblib  # Commented out - we want models in repo for faster Streamlit loading
 plots/
 reports/
 *.png
