--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
 pandas>=2.2.0
 numpy>=2.0.0
-scikit-learn>=1.4.0
+scikit-learn==1.3.2
 xgboost>=2.0.0
 matplotlib>=3.8.0
 seaborn>=0.13.0
