--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-streamlit==1.32.0
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn==1.4.0
-xgboost==2.0.3
-matplotlib==3.8.2
-seaborn==0.13.2
-plotly==5.18.0
-joblib==1.3.2
-threadpoolctl==3.3.0
-scipy==1.12.0
-python-dateutil==2.8.2
-pytz==2023.3.post1
+streamlit>=1.32.0
+pandas>=2.2.0
+numpy>=1.26.0
+scikit-learn>=1.4.0
+xgboost>=2.0.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+plotly>=5.18.0
+joblib>=1.3.0
+scipy>=1.14.0
